--- a/codice/main_file.ipynb
+++ b/codice/main_file.ipynb
@@ -2,14 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from model import modello_albero\n",
+    "from codice.mymodel import modello_albero\n",
     "import pyomo.environ as pyo\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from scipy.io.arff import loadarff \n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "### PREPROCESS DATASET ###\n"
+    "SEED = 1\n",
+    "\n",
+    "### PREPROCESS DATASET ###\n",
+    "\n",
+    "# TODO: NORMALIZZARE DATI\n",
+    "raw_data = loadarff('../dataset/Rice_Cammeo_Osmancik.arff')\n",
+    "df_data = pd.DataFrame(raw_data[0]).to_numpy()\n",
+    "\n",
+    "x_data_raw = df_data[:, :-1]\n",
+    "# Cammeo = 0, Osmancik = 1\n",
+    "y_data_raw = [0 if x == \"Cammeo\" else 1 for x in df_data[:,-1]]\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(x_data_raw, y_data_raw, test_size=0.25, stratify=y_data_raw, \n",
+    "                                                        random_state=SEED) \n",
+    "\n",
+    "num_features = len(X_train[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###  TRAINING MODELLO ###\n",
+    "alpha = 0 # complexity\n",
+    "beta = 0 # n min of elements in a leaf\n",
+    "delta = 0 # depth\n",
+    "\n",
+    "# compute epsilon value (uj)\n",
+    "u = [None for _ in range(num_features)]\n",
+    "for j in range(num_features):\n",
+    "    for i in range(len(X_train)-1):\n",
+    "        diff = abs(X_train[i][j] - X_train[i+1][j])\n",
+    "        if u[j] == None or diff < u[j]:\n",
+    "            u[j] = diff\n",
+    "umax = max(u)\n",
+    "umin = min(u)\n",
+    "\n"
    ]
   },
   {
@@ -18,8 +60,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "###  TRAINING MODELLO ###\n",
-    "modello = modello_albero()\n",
+    "\n",
+    "\n",
+    "modello = modello_albero(alpha, beta, delta, u, umax, umin)\n",
     "\n",
     "opt = pyo.SolverFactory('gurobi')\n",
     "results = opt.solve(modello) # solves and updates model\n",
@@ -44,7 +87,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.11"
   }
  },
