--- a/codice/main_file.ipynb
+++ b/codice/main_file.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,7 @@
     "import pandas as pd\n",
     "from scipy.io.arff import loadarff \n",
     "from sklearn.model_selection import train_test_split\n",
+    "from codice.mytree import Tree\n",
     "\n",
     "SEED = 1\n",
     "\n",
@@ -21,9 +22,10 @@
     "raw_data = loadarff('../dataset/Rice_Cammeo_Osmancik.arff')\n",
     "df_data = pd.DataFrame(raw_data[0]).to_numpy()\n",
     "\n",
+    "# TODO FIXARE ! SONO TUTTI UNI\n",
     "x_data_raw = df_data[:, :-1]\n",
     "# Cammeo = 0, Osmancik = 1\n",
-    "y_data_raw = [0 if x == \"Cammeo\" else 1 for x in df_data[:,-1]]\n",
+    "y_data_raw = [0 if x.decode(\"utf-8\") == \"Cammeo\" else 1 for x in df_data[:,-1]]\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(x_data_raw, y_data_raw, test_size=0.25, stratify=y_data_raw, \n",
     "                                                        random_state=SEED) \n",
@@ -33,11 +35,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "###  TRAINING MODELLO ###\n",
+    "### BUILD PARAMETERS ###\n",
     "alpha = 0 # complexity\n",
     "beta = 0 # n min of elements in a leaf\n",
     "delta = 0 # depth\n",
@@ -51,7 +53,18 @@
     "            u[j] = diff\n",
     "umax = max(u)\n",
     "umin = min(u)\n",
-    "\n"
+    "\n",
+    "## TODO: capire come calcolarlo\n",
+    "lcap = 0.5 \n",
+    "\n",
+    "yi_class = [[None for _ in range(len(np.unique(y_train)))] for _ in range(len(X_train))]\n",
+    "for i in range(len(X_train)):\n",
+    "    for col in range(len(np.unique(y_train))):\n",
+    "        yi_class[i][col] = 1 if y_train[i] == col else 0\n",
+    "\n",
+    "\n",
+    "### BUILD TREE ###\n",
+    "tree = Tree(delta)"
    ]
   },
   {
@@ -62,7 +75,7 @@
    "source": [
     "\n",
     "\n",
-    "modello = modello_albero(alpha, beta, delta, u, umax, umin)\n",
+    "modello = modello_albero(alpha, beta, delta, u, umax, umin, X_train, y_train, tree, lcap, yi_class)\n",
     "\n",
     "opt = pyo.SolverFactory('gurobi')\n",
     "results = opt.solve(modello) # solves and updates model\n",
