--- a/codice/main_file.ipynb
+++ b/codice/main_file.ipynb
@@ -2,9 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-> Branch1\n",
+      "    -> Branch2\n",
+      "        -> Leaf4\n",
+      "        -> Leaf5\n",
+      "    -> Branch3\n",
+      "        -> Leaf6\n",
+      "        -> Leaf7\n"
+     ]
+    }
+   ],
    "source": [
     "from codice import mymodel\n",
     "from codice.mymodel import modello_albero\n",
@@ -15,8 +29,9 @@
     "from sklearn.model_selection import train_test_split\n",
     "from codice.mytree import Tree\n",
     "import importlib\n",
+    "from codice import mynode \n",
     "importlib.reload(mymodel)\n",
-    "\n",
+    "importlib.reload(mynode)\n",
     "\n",
     "SEED = 1\n",
     "\n",
@@ -39,23 +54,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[84.0, 0.0050048828125, 0.6421356201171875, 0.0732269287109375, 1.9848346710205078e-05, 42.0, 0.00022661685943603516]\n",
-      "1.9848346710205078e-05\n",
-      "84.0\n",
+      "[28.0, 0.128021240234375, 0.1252288818359375, 0.060638427734375, 2.8967857360839844e-05, 43.0, 0.0008328557014465332]\n",
+      "2.8967857360839844e-05\n",
+      "43.0\n",
       "2\n"
      ]
     }
    ],
    "source": [
     "### BUILD PARAMETERS ###\n",
-    "alpha = 0.1 # complexity\n",
+    "alpha = 0.5 # complexity\n",
     "beta = 5 # n min of elements in a leaf\n",
     "delta = 2 # depth\n",
     "\n",
@@ -94,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -106,8 +121,8 @@
       "[None, None, None]\n",
       "Set parameter Username\n",
       "Academic license - for non-commercial use only - expires 2025-05-20\n",
-      "Read LP format model from file C:\\Users\\march\\AppData\\Local\\Temp\\tmp54nefgqd.pyomo.lp\n",
-      "Reading time = 0.02 seconds\n",
+      "Read LP format model from file C:\\Users\\march\\AppData\\Local\\Temp\\tmp3cjjm7v9.pyomo.lp\n",
+      "Reading time = 0.03 seconds\n",
       "x1: 2517 rows, 815 columns, 18369 nonzeros\n",
       "Gurobi Optimizer version 11.0.2 build v11.0.2rc0 (win64 - Windows 11.0 (22631.2))\n",
       "\n",
@@ -115,7 +130,7 @@
       "Thread count: 8 physical cores, 16 logical processors, using up to 16 threads\n",
       "\n",
       "Optimize a model with 2517 rows, 815 columns and 18369 nonzeros\n",
-      "Model fingerprint: 0x52f2cba5\n",
+      "Model fingerprint: 0xee45fd6d\n",
       "Variable types: 3 continuous, 812 integer (796 binary)\n",
       "Coefficient statistics:\n",
       "  Matrix range     [5e-01, 2e+04]\n",
@@ -123,77 +138,83 @@
       "  Bounds range     [1e+00, 1e+00]\n",
       "  RHS range        [1e+00, 2e+02]\n",
       "Presolve removed 9 rows and 21 columns\n",
-      "Presolve time: 0.01s\n",
+      "Presolve time: 0.03s\n",
       "Presolved: 2508 rows, 794 columns, 9225 nonzeros\n",
       "Variable types: 3 continuous, 791 integer (779 binary)\n",
       "Found heuristic solution: objective 156.2000000\n",
       "\n",
-      "Root relaxation: objective 0.000000e+00, 661 iterations, 0.01 seconds (0.03 work units)\n",
+      "Root relaxation: objective 0.000000e+00, 749 iterations, 0.04 seconds (0.04 work units)\n",
       "\n",
       "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
       " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
       "\n",
-      "     0     0    0.00000    0  393  156.20000    0.00000   100%     -    0s\n",
-      "H    0     0                     134.3000000    0.00000   100%     -    0s\n",
-      "     0     0    0.00000    0  416  134.30000    0.00000   100%     -    0s\n",
-      "     0     0    0.00000    0  247  134.30000    0.00000   100%     -    0s\n",
-      "H    0     0                     130.3000000    0.03306   100%     -    0s\n",
-      "     0     0    0.10000    0  263  130.30000    0.10000   100%     -    0s\n",
-      "H    0     0                     114.3000000    0.10000   100%     -    0s\n",
-      "     0     0    0.10000    0  319  114.30000    0.10000   100%     -    0s\n",
-      "     0     0    0.10000    0  260  114.30000    0.10000   100%     -    0s\n",
-      "H    0     0                     108.3000000    0.10000   100%     -    0s\n",
-      "     0     0    0.12501    0  204  108.30000    0.12501   100%     -    0s\n",
-      "     0     0    0.19863    0  232  108.30000    0.19863   100%     -    0s\n",
-      "H    0     0                      72.1000000    0.19863   100%     -    0s\n",
-      "     0     0    0.19863    0  202   72.10000    0.19863   100%     -    0s\n",
-      "     0     0    0.20000    0   80   72.10000    0.20000   100%     -    0s\n",
-      "     0     0    0.20000    0  130   72.10000    0.20000   100%     -    0s\n",
-      "     0     0    0.20000    0  172   72.10000    0.20000   100%     -    1s\n",
-      "     0     0    0.20000    0  206   72.10000    0.20000   100%     -    1s\n",
-      "     0     0    0.20000    0  196   72.10000    0.20000   100%     -    1s\n",
-      "     0     0    0.20000    0  112   72.10000    0.20000   100%     -    1s\n",
-      "     0     2    0.20000    0   34   72.10000    0.20000   100%     -    1s\n",
-      "  2614  1177   29.19463   31   79   72.10000    0.20000   100%  38.9    5s\n",
-      "  2714  1237    0.30000   19  253   72.10000    0.30000   100%  59.7   10s\n",
-      "  2967  1202   32.20000   21  202   72.10000    0.30000   100%  65.6   15s\n",
-      "H 3373  1070                      68.3000000    0.30000   100%  71.2   19s\n",
-      "  3862  1074   56.30000   43   47   68.30000    0.30000   100%  71.2   20s\n",
-      "  6875   811 infeasible   29        68.30000    0.30000   100%  75.7   29s\n",
-      "H 6881   805                      66.3000000    0.30000   100%  75.9   29s\n",
-      "  6984   790    0.30000   35  326   66.30000    0.30000   100%  78.9   30s\n",
-      " 12139  1298    8.42872   32  145   66.30000    4.92357  92.6%  69.4   35s\n",
-      " 18874  1821 infeasible   42        66.30000   10.20000  84.6%  59.3   40s\n",
-      " 21126  1882   52.34995   37   45   66.30000   12.83415  80.6%  59.0   48s\n",
-      "H21136  1873                      64.3000000   12.83415  80.0%  59.0   48s\n",
-      " 21162  1653 infeasible   38        64.30000   13.30627  79.3%  59.0   50s\n",
-      " 24228  1922   32.30000   34   89   64.30000   20.68719  67.8%  57.8   55s\n",
-      " 30883  1513 infeasible   38        64.30000   36.29822  43.5%  53.0   61s\n",
-      " 36834  1302   50.30000   46   42   64.30000   39.48231  38.6%  49.0   66s\n",
+      "     0     0    0.00000    0  102  156.20000    0.00000   100%     -    0s\n",
+      "     0     0    0.00000    0  246  156.20000    0.00000   100%     -    0s\n",
+      "     0     0    0.00000    0  224  156.20000    0.00000   100%     -    0s\n",
+      "     0     0    0.00000    0  177  156.20000    0.00000   100%     -    0s\n",
+      "H    0     0                     140.2000000    0.00000   100%     -    0s\n",
+      "     0     0    0.00000    0  184  140.20000    0.00000   100%     -    0s\n",
+      "     0     0    0.02290    0  279  140.20000    0.02290   100%     -    0s\n",
+      "     0     0    0.02837    0  261  140.20000    0.02837   100%     -    0s\n",
+      "H    0     0                     132.2000000    0.05000   100%     -    0s\n",
+      "     0     0    0.05000    0  356  132.20000    0.05000   100%     -    0s\n",
+      "     0     0    0.10000    0  376  132.20000    0.10000   100%     -    0s\n",
+      "     0     0    0.10000    0  368  132.20000    0.10000   100%     -    0s\n",
+      "     0     0    0.10000    0  366  132.20000    0.10000   100%     -    0s\n",
+      "H    0     0                     130.3000000    0.10000   100%     -    1s\n",
+      "     0     0    0.10000    0  263  130.30000    0.10000   100%     -    1s\n",
+      "     0     0    0.10000    0  298  130.30000    0.10000   100%     -    1s\n",
+      "H    0     0                     126.3000000    0.10000   100%     -    1s\n",
+      "     0     0    0.10000    0  270  126.30000    0.10000   100%     -    1s\n",
+      "     0     0    0.10000    0  270  126.30000    0.10000   100%     -    1s\n",
+      "     0     2    0.10000    0  246  126.30000    0.10000   100%     -    1s\n",
+      "H   33    40                     124.3000000    0.13000   100%   284    2s\n",
+      "H   77    73                      96.2000000    0.15000   100%   235    2s\n",
+      "H  126   106                      84.2000000    0.15000   100%   173    2s\n",
+      "H  126   106                      76.2000000    0.15000   100%   173    2s\n",
+      "H  166   128                      64.2000000    0.15000   100%   145    2s\n",
+      "H  261   169                      64.1000000    0.20000   100%   104    3s\n",
+      "  1563   583 infeasible   41        64.10000    0.20000   100%  42.9    6s\n",
+      "  4039  1094     cutoff   24        64.10000    0.20000   100%  40.8   10s\n",
+      "  4877  1044   56.49076   43   93   64.10000    0.20000   100%  41.3   15s\n",
+      "  7859   952    0.30000   41  303   64.10000    0.20000   100%  40.2   21s\n",
+      " 12322  1528 infeasible   40        64.10000    0.23281   100%  38.1   25s\n",
+      " 18834  2535   15.99320   37  121   64.10000    0.30000   100%  34.4   30s\n",
+      " 32931  3034 infeasible   37        64.10000    0.41739  99.3%  29.3   35s\n",
+      "*33863  3153              33      60.3000000    0.64977  98.9%  29.1   35s\n",
+      " 42800  3553    4.52838   31  270   60.30000    2.20000  96.4%  28.3   46s\n",
+      " 42810  3560    4.30676   46  274   60.30000    2.20000  96.4%  28.3   50s\n",
+      " 42822  3568    4.32754   32  216   60.30000    2.20000  96.4%  28.3   55s\n",
+      " 43132  3586     cutoff   41        60.30000    2.20000  96.4%  29.0   60s\n",
+      " 47145  2616 infeasible   66        60.30000    2.20000  96.4%  28.6   67s\n",
+      " 47268  2561 infeasible   35        60.30000    2.20000  96.4%  28.7   70s\n",
+      " 51366  1622    2.20000   45  245   60.30000    2.20000  96.4%  28.4   75s\n",
+      " 63508  1667 infeasible   53        60.30000    2.30000  96.2%  27.0   80s\n",
+      " 82105  2130 infeasible   44        60.30000    6.23502  89.7%  23.4   85s\n",
+      " 95117  1830 infeasible   99        60.30000    8.20000  86.4%  22.3   90s\n",
+      " 107602  2157 infeasible   36        60.30000   12.53248  79.2%  21.0   96s\n",
+      "*108784  2151              70      58.3000000   14.20000  75.6%  20.8   96s\n",
+      " 126028  1363   54.30811   56   60   58.30000   40.22668  31.0%  19.4  100s\n",
       "\n",
       "Cutting planes:\n",
-      "  Learned: 414\n",
-      "  Gomory: 9\n",
-      "  Cover: 3188\n",
-      "  Implied bound: 127\n",
-      "  Clique: 48\n",
-      "  MIR: 282\n",
-      "  StrongCG: 20\n",
-      "  Flow cover: 1243\n",
-      "  GUB cover: 157\n",
-      "  Inf proof: 312\n",
-      "  Zero half: 14\n",
-      "  RLT: 32\n",
-      "  Relax-and-lift: 30\n",
-      "  BQP: 13\n",
+      "  Learned: 21\n",
+      "  Gomory: 4\n",
+      "  Cover: 54\n",
+      "  Implied bound: 1\n",
+      "  Clique: 6\n",
+      "  MIR: 12\n",
+      "  StrongCG: 2\n",
+      "  Flow cover: 32\n",
+      "  Zero half: 2\n",
+      "  BQP: 2\n",
       "\n",
-      "Explored 42432 nodes (1971993 simplex iterations) in 70.04 seconds (68.99 work units)\n",
+      "Explored 135187 nodes (2536884 simplex iterations) in 102.60 seconds (60.22 work units)\n",
       "Thread count was 16 (of 16 available processors)\n",
       "\n",
-      "Solution count 10: 64.3 64.3 66.3 ... 156.2\n",
+      "Solution count 10: 58.3 58.3 60.3 ... 126.3\n",
       "\n",
       "Optimal solution found (tolerance 1.00e-04)\n",
-      "Best objective 6.430000000000e+01, best bound 6.430000000000e+01, gap 0.0000%\n"
+      "Best objective 5.830000000000e+01, best bound 5.830000000000e+01, gap 0.0000%\n"
      ]
     }
    ],
@@ -212,158 +233,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "### VALIDAZIONE ###\n",
-    "print(modello.lsmall[4].value )\n",
-    "print(modello.lsmall[5].value )\n",
-    "print(modello.lsmall[6].value )\n",
-    "print(modello.lsmall[7].value )\n",
+    "amatrix = np.empty((num_features, 2**delta-1))\n",
+    "for riga in range(num_features):\n",
+    "    for col in range(1, 2**delta-1):\n",
+    "        amatrix[riga, col] = modello.a[riga, col].value\n",
     "\n",
-    "print()\n",
-    "print(modello.d[1].value )\n",
-    "print(modello.d[2].value )\n",
-    "print(modello.d[3].value )\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "cvector = []\n",
+    "for col in range(2**delta, 2**(delta+1)):\n",
+    "    if modello.c[0, col].value == 1:\n",
+    "        cvector.append(0)\n",
+    "    else:\n",
+    "        cvector.append(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.0\n",
-      "32.0\n",
-      "83.0\n",
-      "65.0\n",
-      "10.0\n",
-      "32.0\n",
-      "83.0\n",
-      "65.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\march\\AppData\\Local\\Temp\\ipykernel_13748\\2236415816.py:1: DeprecationWarning: Calling np.sum(generator) is deprecated, and in the future will give a different result. Use np.sum(np.fromiter(generator)) or the python sum builtin instead.\n",
-      "  print(np.sum(modello.z[i, 4].value for i in range(len(y_train))))\n",
-      "C:\\Users\\march\\AppData\\Local\\Temp\\ipykernel_13748\\2236415816.py:2: DeprecationWarning: Calling np.sum(generator) is deprecated, and in the future will give a different result. Use np.sum(np.fromiter(generator)) or the python sum builtin instead.\n",
-      "  print(np.sum(modello.z[i, 5].value for i in range(len(y_train))))\n",
-      "C:\\Users\\march\\AppData\\Local\\Temp\\ipykernel_13748\\2236415816.py:3: DeprecationWarning: Calling np.sum(generator) is deprecated, and in the future will give a different result. Use np.sum(np.fromiter(generator)) or the python sum builtin instead.\n",
-      "  print(np.sum(modello.z[i, 6].value for i in range(len(y_train))))\n",
-      "C:\\Users\\march\\AppData\\Local\\Temp\\ipykernel_13748\\2236415816.py:4: DeprecationWarning: Calling np.sum(generator) is deprecated, and in the future will give a different result. Use np.sum(np.fromiter(generator)) or the python sum builtin instead.\n",
-      "  print(np.sum(modello.z[i, 7].value for i in range(len(y_train))))\n"
+      "-> Branch1\n",
+      "    -> Branch2\n",
+      "        -> Leaf4\n",
+      "        -> Leaf5\n",
+      "    -> Branch3\n",
+      "        -> Leaf6\n",
+      "        -> Leaf7\n",
+      "1549\n",
+      "3620\n",
+      "Accuracy:  42.790055248618785 %\n"
      ]
     }
    ],
    "source": [
-    "print(np.sum(modello.z[i, 4].value for i in range(len(y_train))))\n",
-    "print(np.sum(modello.z[i, 5].value for i in range(len(y_train))))\n",
-    "print(np.sum(modello.z[i, 6].value for i in range(len(y_train))))\n",
-    "print(np.sum(modello.z[i, 7].value for i in range(len(y_train))))\n",
+    "from codice import mynode\n",
+    "importlib.reload(mynode)\n",
     "\n",
-    "print(modello.n2[4].value)\n",
-    "print(modello.n2[5].value)\n",
-    "print(modello.n2[6].value)\n",
-    "print(modello.n2[7].value)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10.0\n",
-      "32.0\n",
-      "83.0\n",
-      "65.0\n",
-      "\n",
-      "0.0\n",
-      "24.0\n",
-      "8.0\n",
-      "49.0\n",
-      "\n",
-      "0.0\n",
-      "1.0\n",
-      "0.0\n",
-      "1.0\n"
-     ]
-    }
-   ],
-   "source": [
+    "validationtree = mynode.create_complete_tree(1,depth=delta)\n",
+    "mynode.init_bfs(validationtree, avalues=amatrix, bvalues=modello.b, dvalues=modello.d, classnames=cvector, depth=delta)\n",
     "\n",
+    "numcorretti = 0\n",
+    "for i in range(len(y_test)):\n",
+    "    numcorretti += mynode.validate(X_test[i, :], y_test[i], validationtree)\n",
     "\n",
-    "print(modello.n2[4].value )\n",
-    "print(modello.n2[5].value )\n",
-    "print(modello.n2[6].value )\n",
-    "print(modello.n2[7].value )\n",
-    "\n",
-    "print()\n",
-    "print(modello.n1[0,4].value )\n",
-    "print(modello.n1[0,5].value )\n",
-    "print(modello.n1[0,6].value )\n",
-    "print(modello.n1[0,7].value )\n",
-    "\n",
-    "print()\n",
-    "print(modello.c[0,4].value )\n",
-    "print(modello.c[0,5].value )\n",
-    "print(modello.c[0,6].value )\n",
-    "print(modello.c[0,7].value )\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "0.592190146446228\n",
-      "0.8948467969894409\n",
-      "0.8882372379302979\n"
-     ]
-    }
-   ],
-   "source": [
-    "print()\n",
-    "print(modello.b[1].value )\n",
-    "print(modello.b[2].value )\n",
-    "print(modello.b[3].value )\n",
-    "\n"
+    "print(numcorretti)\n",
+    "print(len(y_test))\n",
+    "print(\"Accuracy: \", (numcorretti/len(y_test))*100, \"%\")"
    ]
   },
   {
