add new sklearn hgraph

--- a/codice/main_file.ipynb
+++ b/codice/main_file.ipynb
@@ -20,7 +20,7 @@
     "importlib.reload(mymodel)\n",
     "importlib.reload(mynode)\n",
     "\n",
-    "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
     "\n",
     "SEED = 1\n",
